--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,12 +1,20 @@
 <div class="center-div">
-<h3>P5.js Canvas</h3>
-<p id="canvas-size"></p>
-
+  <h3>P5.js Canvas</h3>
+  <debug><%= @size %></debug>
+  <debug><%= @width %> x <%= @height %></debug>
+  <p id="canvas-size"></p>
   <div id="p5canvas">
   </div>
 </div>
+
+<%= form_for :size, url: pages_update_path do |f| %>
+  <%= f.select :size, options_for_select([["1024x768"],["800x600"],["640x480"]]) %>
+  <%= f.submit %>
+<% end %>
 
 <%# Not needed since file is already included in pipeline %>
 <%# TO-DO: Tweaks/gem for page-specific javascript %>
 
 <%# javascript_include_tag "p5canvas" %>
+
+<%= render 'p1_canvas' %>
