--- a/app/views/pages/_p1_canvas.html.erb
+++ b/app/views/pages/_p1_canvas.html.erb
@@ -1,19 +1,26 @@
 <script>
   function setup(){
-    canvas = createCanvas(<%= @width %>,<%= @height %>).parent("#p5canvas");
+    var canvas = createCanvas(<%= @width %>,<%= @height %>).parent("#p5canvas");
     $("#canvas-size").text(width+" x "+height);
+    noStroke();
   }
 
   function colorPicker(){
-    r = map(mouseX,0,width,0,255);
-    g = map(mouseY,0,height,0,255);
-    b = map(mouseY,0,width,0,255);
+    var r = map(mouseX,0,width,0,255);
+    var g = map(mouseY,0,height,0,255);
+    var b = map(mouseY,0,width,0,255);
     return color(r,g,b);
   }
 
   function draw(){
-    c = colorPicker();
+    if(mouseIsPressed){
+      drawCircles();
+    }
+  }
+
+  function drawCircles(){
+    var c = colorPicker();
     fill(c);
-    ellipse(mouseX,mouseY,50,50);
+    ellipse(mouseX,mouseY,20,20);
   }
 </script>
