Building views for sketches

--- a/app/views/sketches/_form.html.erb
+++ b/app/views/sketches/_form.html.erb
@@ -1,12 +1,22 @@
-<%= form_for @sketch do |f| %>
-    <%= f.label :title %>
-    <%= f.text_field :title %>
+<%= form_for(sketch) do |f| %>
 
-    <%= f.label :description %>
-    <%= f.text_field :description %>
-
-    <%= f.label :code %>
-    <%= f.text_area :code %>
-
-    <%= f.submit %>
+    <div class="sketch-form">
+      <ul>
+        <li>
+        <%= f.label :title %>
+        <%= f.text_field :title %>
+        </li>
+        <li>
+        <%= f.label :description %>
+        <%= f.text_field :description %>
+        </li>
+        <li>
+        <%= f.label :code %>
+        <%= f.text_area :code %>
+        </li>
+        <li>
+        <%= f.button %>
+        </li>
+      </ul>
+    </div>
 <% end %>
