--- a/app/views/sketches/index.html.erb
+++ b/app/views/sketches/index.html.erb
@@ -1,5 +1,14 @@
-<h3>Sketch List</h3>
+<div class="container">
 
-<%= render @sketches %>
+  <h3>Sketch List</h3>
 
-<%= link_to "New Sketch", new_sketch_path %>
+  <%= render @sketches %>
+
+  <br>
+  <hr>
+
+  <div class="main-link">
+    <%= link_to "New Sketch", new_sketch_path %>
+  </div>
+
+</div>
