--- a/app/views/sketches/new.html.erb
+++ b/app/views/sketches/new.html.erb
@@ -2,6 +2,8 @@
 
   <h3>New Sketch</h3>
 
-  <%= render 'form' %>
+  <div class="form-container">
+    <%= render 'form', sketch: @sketch %>
+  </div>
 
 </div>
