--- a/app/views/sketches/_sketch.html.erb
+++ b/app/views/sketches/_sketch.html.erb
@@ -1,17 +1,19 @@
 <div class="rounded-box inline">
-
-  <ul>
-    <li>
-      <p class="sketch-title"><%= sketch.title %></p>
-    </li>
-    <li>
-      <p>Description:</p>
-      <small><%= sketch.description %></small>
-    </li>
-  </ul>
+  <div class="sketch-info">
+    <ul>
+      <li>
+        <p class="sketch-title"><%= sketch.title %></p>
+      </li>
+      <li>
+        <p>Description:</p>
+        <small><%= sketch.description %></small>
+      </li>
+    </ul>
+  </div>
   <br>
   <%# Passing 'sketch' as an argument here is enough for it to route to show path %>
-  <small><%= link_to "Open", sketch %></small>
-  <small><%= link_to "Delete", sketch, method: :delete %>
-
+  <div class="links-bottom">
+      <small><%= link_to "Open", sketch %></small>
+      <small><%= link_to "Delete", sketch, method: :delete %></small>
+  </div>
 </div>
