Added canvas styling for running sketch code

--- a/app/assets/stylesheets/sketches/sketches.css
+++ b/app/assets/stylesheets/sketches/sketches.css
@@ -77,3 +77,9 @@ p.code {
     width: 50em;
     height: 50em;
 }
+
+#sketch-canvas {
+    display: inline-block;
+    border: 3px solid black;
+    border-radius: 8px;
+}
