Added script window viewport for each sketch

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
+  <h1><%= link_to "Sketches", sketches_path %></h1>
+
   <body>
     <%= yield %>
   </body>
