--- a/app/views/sketches/show.html.erb
+++ b/app/views/sketches/show.html.erb
@@ -5,8 +5,14 @@
   <small><%= @sketch.description %></small>
 
   <div class="box-code">
-    <%= simple_format @sketch.code, class: "code" %>
+    <%= @sketch.code.html_safe %>
   </div>
+
+  <br>
+  <div id="sketch-canvas">
+    <script><%= (@sketch.code).html_safe %></script>
+  </div>
+  <br>
 
   <small><%= link_to "Edit", edit_sketch_path(@sketch) %></small>
   <small><%= link_to "Delete", @sketch, method: :delete %></small>
