Uniformized design elements

--- a/app/views/sketches/edit.html.erb
+++ b/app/views/sketches/edit.html.erb
@@ -1,3 +1,7 @@
-<h3>Edit Sketch</h3>
+<div class="container">
 
-<%= render 'form', sketch: @sketch %>
+    <h3>Edit Sketch</h3>
+
+    <%= render 'form', sketch: @sketch %>
+
+</div>
