--- a/app/views/sketches/show.html.erb
+++ b/app/views/sketches/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 
-  <p class="sketch-title"><%= @sketch.title %></p>
+  <h3><%= @sketch.title %></h3>
 
   <small><%= @sketch.description %></small>
 
